--- a/css/kiuwan.css
+++ b/css/kiuwan.css
@@ -62,7 +62,9 @@
 }
 .text-margin {
     margin-bottom: 15px;
+    font-size: 14px;
 }
+
 .box-margin {
     margin-bottom: 35px;
 }
@@ -70,6 +72,7 @@
     clear: both;
 }
 .text-width {
+    font-size: 14px;
     padding-right: 15px;
     padding-left: 30px;
 }
@@ -77,7 +80,7 @@
     float: left;
 }
 .kiuwan-link {
-    padding-top: 10px;
+    padding-top: 15px;
     display: block;
 }
 .audit-result-text {
@@ -105,12 +108,19 @@
     color: #66cc66;
 }
 .checkpoint-summary {
-    font-size: 20px;
+    font-size: 19px;
 }.checkpoint {
     padding-left: 30px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: lighter;
 }
 .hide {
     display: none;
+}
+.kiuwan-subtitle {
+    font-size: 17px;
+    padding-bottom: 15px;
+}
+.kiuwan-text {
+    font-size: 14px;
 }
